изменить методы